--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app" class="container">
-        <h1>Sistema de Ponto da Yasmin</h1>
+        <h1>Sistema de Ponto</h1>
         <div class="ponto-container">
             <p id="clock" class="datetime-box"></p>
             <button onclick="registrarPonto()" class="ponto-button">Registrar Ponto</button>
